# nssvie

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  CODE_OF_CONDUCT.md  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-publish.yml  check-manifest.yml  deploy-pypi.yml  lint-and-test.yml  python-package.yml  python-publish.yml  run-tests.yml
Neuer Ordner/source/: api.rst  conf.py
Neuer Ordner/source/_templates/: layout.html
Neuer Ordner/source/theory/: theory_index.rst
docs/: doc-requirements.txt  requirements.txt
docs/source/: api.rst  cite.rst  conf.py  custom_domain.py  index.rst  test  theory.rst  theory_cite.rst
docs/source/_static/: nssvie.css
docs/source/_static/css/: custom-pydata.css
docs/source/_static/icons/: nssive-dark  nssive-light
docs/source/_static/js/: custom-pydata.js
docs/source/_templates/: layout.html  sidebar-nav-bs.html  sidebar_nav_bs.html
docs/source/_templates/autosummary/: class.rst
docs/source/reference/: api.rst
docs/source/theory/: bpf.rst  index.rst
examples/: example1.ipynb
src/nssvie/: __init__.py  _version.py
src/nssvie/_integral_equations/: __init__.py  base.py  svie.py
src/nssvie/_orthogonal_functions/: __init__.py  base.py  bpf.py
src/nssvie/_process/: __init__.py  base.py  brownian_motion.py  ito_process.py
src/nssvie/_random/: __init__.py  base.py
tests/: test_bpf.py  test_bpf_coeff.py  test_brownian_motion.py  test_matrix_b1.py  test_op_matrix.py  test_stoch_op_matrix.py
