[tool.poetry]
name = "nssvie"
version = "0.1.0"
description = ""
authors = ["dsagolla <dsagolla@mailbox.org>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scipy = "^1.11.4"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
