[tool.poetry]
name = "nssvie"
version = "0.1.0"
description = ""
authors = ["dsagolla <dsagolla@mailbox.org>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
scipy = "^1.11.4"


[tool.poetry.group.docs.dependencies]
sphinx = "5.3.0"
sphinx-math-dollar = "1.2.1"
pydata-sphinx-theme = "^0.14.3"
numpydoc = "1.5.0"
sphinx-design = "0.3.0"
sphinx-copybutton = "0.5.0"
sphinx-togglebutton = "0.3.2"
nbsphinx = "0.8.10"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
