[tool.poetry]
name = "nssvie"
version = "0.1.0"
description = "A python package for computing a numerical solution of stochastic Volterra integral equations of the second kind based on block pulse functions."
license = "GPL-3.0-only"
authors = ["Daniel Sagolla <dsagolla@mailbox.org>"]
readme = "README.rst"
repository = "https://github.com/dsagolla/nssvie"
documentation = "https://nssvie.readthedocs.io"
keywords = ["mathematics", "stochastic", "numerical solution", "sde"]
classifiers = [
        "Operating System :: OS Independent",
        "Natural Language :: English",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Financial and Insurance Industry",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Programming Language :: Python :: 3.11",
        "Topic :: Software Development",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Mathematics",
        "Topic :: Software Development :: Libraries :: Python Modules"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dsagolla/nssvie/issues"


[tool.poetry.dependencies]
python = "^3.11.0"
numpy = "^1.26.2"
scipy = "^1.11.4"


[tool.poetry.group.docs.dependencies]
sphinx = "5.3.0"
sphinx-math-dollar = "1.2.1"
pydata-sphinx-theme = "^0.14.3"
numpydoc = "1.5.0"
sphinx-design = "0.3.0"
sphinx-copybutton = "0.5.0"
sphinx-togglebutton = "0.3.2"
nbsphinx = "0.8.10"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
